--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "dompurify": "^3.2.2",
+    "dotenv": "^16.4.7",
     "draggable": "^4.2.0",
     "framer-motion": "^11.13.1",
     "jwt-decode": "^4.0.0",
