--- a/FrontEnd/nginx.conf
+++ b/FrontEnd/nginx.conf
@@ -5,23 +5,29 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # 요청 본문 크기 제한 설정 (100MB로 증가)
+    client_max_body_size 100M;
+
     # React 빌드 결과 서빙
     location / {
         try_files $uri /index.html;
     }
 
     # API 요청을 백엔드로 프록시
-    location /api {
-        proxy_pass http://backend:5000; # 백엔드 컨테이너 이름
+    location /api/ {
+        proxy_pass http://backend:5000/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
 
-        # 추가 헤더 (선택 사항)
+        # 추가 헤더
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # API 요청 본문 크기 제한 (100MB 설정)
+        client_max_body_size 100M;
     }
 
     # SPA 라우팅 지원
